--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,10 @@
     transform: translateY(240%);
   }
   
+ /* .hero-section{
+    background-image: url("/public/hero-bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    z-index: 2;
+  } */
